[gd_scene load_steps=7 format=3 uid="uid://x7f38nuvcl04"]

[ext_resource type="Script" path="res://Scripts/load_ui.gd" id="1_c5bbe"]
[ext_resource type="Texture2D" uid="uid://dtkydo6kjedlt" path="res://Art/UI/BACKGROUND.png" id="2_xe8vm"]
[ext_resource type="FontFile" uid="uid://46l121pcrkpu" path="res://Fonts/Farro-Medium.otf" id="4_407w7"]
[ext_resource type="Theme" uid="uid://bp556hodxijho" path="res://Themes/Main Theme.tres" id="5_c68td"]
[ext_resource type="FontFile" uid="uid://bhivsmjg0y6jw" path="res://Fonts/Farro-Regular.otf" id="5_ovs27"]
[ext_resource type="Theme" uid="uid://biecx1s4qgwjo" path="res://Themes/Blank Theme.tres" id="7_u2wfn"]

[node name="LoadUI" type="Control" node_paths=PackedStringArray("error_label", "error_prompt")]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
script = ExtResource("1_c5bbe")
error_label = NodePath("Error Prompt/Label")
error_prompt = NodePath("Error Prompt")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(400, 300)
texture = ExtResource("2_xe8vm")

[node name="MAIN MENU" type="Button" parent="."]
layout_mode = 0
offset_left = 308.0
offset_top = 453.0
offset_right = 708.0
offset_bottom = 581.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_c68td")
text = "MAIN MENU"

[node name="Load Save 3" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 109.0
offset_right = 920.0
offset_bottom = 237.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_c68td")
text = "LOAD SAVE 3
"

[node name="Load Save 2" type="Button" parent="."]
layout_mode = 0
offset_left = 308.0
offset_top = 109.0
offset_right = 708.0
offset_bottom = 237.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_c68td")
text = "LOAD SAVE 2"

[node name="Load Save 1" type="Button" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 109.0
offset_right = 497.0
offset_bottom = 237.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("5_c68td")
text = "LOAD SAVE 1"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 48.0
offset_right = 484.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_407w7")
theme_override_font_sizes/font_size = 30
text = "Load Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Error Prompt" type="Panel" parent="."]
layout_mode = 0
offset_left = 249.0
offset_top = 216.0
offset_right = 569.0
offset_bottom = 368.0
theme = ExtResource("5_c68td")

[node name="Label" type="Label" parent="Error Prompt"]
layout_mode = 0
offset_left = 19.0
offset_top = 16.0
offset_right = 299.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ovs27")
theme_override_font_sizes/font_size = 17
text = "Save Slot Does not Exist.
Please create a new one to play."
horizontal_alignment = 1
vertical_alignment = 1

[node name="OK" type="Button" parent="Error Prompt"]
layout_mode = 0
offset_left = 97.0
offset_top = 104.0
offset_right = 225.0
offset_bottom = 136.0
theme = ExtResource("7_u2wfn")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 19
text = "OK"

[connection signal="pressed" from="MAIN MENU" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Load Save 3" to="." method="_on_load_save_3_pressed"]
[connection signal="pressed" from="Load Save 2" to="." method="_on_load_save_2_pressed"]
[connection signal="pressed" from="Load Save 1" to="." method="_on_load_save_1_pressed"]
[connection signal="pressed" from="Error Prompt/OK" to="." method="close_error_prompt"]
